# quake_bsp_vulkan

./: .gitattributes  .gitignore  LICENSE  QuakeBspViewer.sln  QuakeBspViewer.vcxproj  QuakeBspViewer.vcxproj.filters  README.md  run-multithread.bat  run.bat  shaders.bat
android/: .gitignore  settings.gradle
android/QuakeBspViewer/: CMakeLists.txt  build.gradle
android/QuakeBspViewer/src/main/: AndroidManifest.xml
android/QuakeBspViewer/src/main/cpp/: native-lib.cpp
android/QuakeBspViewer/src/main/java/pl/kondrak/quakebspviewer/: MainActivity.java
android/QuakeBspViewer/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
contrib/stb_image/: stb_image.c  stb_image.h
iOS/: Info.plist  shaders.sh
iOS/QuakeBspViewer.xcodeproj/: project.pbxproj
iOS/QuakeBspViewer.xcodeproj/xcshareddata/xcschemes/: QuakeBspViewer.xcscheme
linux/: Makefile  common.mk  debug.mk  release.mk  run-multithread.sh  run.sh  shaders.sh  sources.mk
macOS/QuakeBspViewer.xcodeproj/: project.pbxproj
macOS/QuakeBspViewer.xcodeproj/xcshareddata/xcschemes/: QuakeBspViewer.xcscheme
maps/: ntkjidm2.bsp
osx/QuakeBspViewer.xcodeproj/: project.pbxproj
osx/QuakeBspViewer.xcodeproj/xcshareddata/xcschemes/: QuakeBspViewer.xcscheme
res/: Basic.frag  Basic.vert  Basic_frag.spv  Basic_vert.spv  Font.frag  Font.vert  Font_frag.spv  Font_vert.spv
src/: Application.cpp  Application.hpp  Frustum.cpp  Frustum.hpp  InputHandlers.cpp  InputHandlers.hpp  Math.cpp  Math.hpp  StringHelpers.cpp  StringHelpers.hpp  ThreadProcessor.cpp  ThreadProcessor.hpp  Utils.cpp  Utils.hpp  main.cpp
src/android/: AndroidUtils.cpp
src/apple/: AppleUtils.hpp  AppleUtils.mm
src/common/: BspMap.hpp  StatsUI.hpp
src/q3bsp/: Q3Bsp.hpp  Q3BspLoader.cpp  Q3BspLoader.hpp  Q3BspMap.cpp  Q3BspMap.hpp  Q3BspPatch.cpp  Q3BspPatch.hpp  Q3BspRenderHelpers.hpp  Q3BspStatsUI.cpp  Q3BspStatsUI.hpp
src/renderer/: Camera.cpp  Camera.hpp  CameraDirector.cpp  CameraDirector.hpp  Font.cpp  Font.hpp  GameTexture.cpp  GameTexture.hpp  RenderContext.cpp  RenderContext.hpp  TextureManager.cpp  TextureManager.hpp  Ubo.hpp
src/renderer/vulkan/: Base.cpp  Base.hpp  Buffers.cpp  Buffers.hpp  CmdBuffer.cpp  CmdBuffer.hpp  Device.cpp  Device.hpp  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  Validation.cpp  Validation.hpp  VkCommon.cpp  VkMemAlloc.cpp
